fberger_services/v1/srcs/kustomization/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: ft_services
spec:
  clusterIP: None
  ports:
  - port: 8086
  selector:
    app: ft_Services
    tier: influxdb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: ft_services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: influxdb
    spec:
      containers:
      - image: custom_influxdb
        imagePullPolicy: Never
        name: influxdb
        ports:
        - containerPort: 8086
          name: influxdb
        volumeMounts:
          - name: influx-persistent-storage
            mountPath: /app/influx
      volumes:
      - name: influx-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
