fberger_services/v1/srcs/kustomization/telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: ft_services
spec:
  clusterIP: None
  selector:
    app: ft_Services
    tier: telegraf

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-dpl
  labels:
    app: ft_services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
  template:
    metadata:
      labels:
        name: telegraf
        tier: telegraf
    spec:
      serviceAccountName: telegraf-account
      containers:
      - name: telegraf
        image: custom_telegraf
        imagePullPolicy: Never
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf
      volumes:
      - name: config
        configMap:
          name: telegraf-config

# ---

# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRoleBinding
# metadata:
#   name: telegraf-account
# roleRef:
#   apiGroup: rbac.authorization.k8s.io
#   kind: ClusterRole
#   name: cluster-admin
# subjects:
# - kind: ServiceAccount
#   name: telegraf-account
#   namespace: default

# ---

# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: telegraf-account
#   labels:
#     app: telegraf
