fberger_services/v1/srcs/kustomization/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    run: wordpress
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: 5050
      nodePort: 30036
  selector:
    app: ft_services
    tier: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: ft_services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: frontend
    spec:
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      containers:
      - image: custom_wp
        imagePullPolicy: Never
        name: wordpress
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      # volumes:
      # - name: sites-source
      #   persistentVolumeClaim:
      #     claimName: sites-pvc
