fberger_services/v1/srcs/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ft-service-ingress
  labels:
    app: ingress-controller
spec:
  backend:
    serviceName: nginx
    servicePort: 32080
